# agentic_rag

./: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yaml  main.py  proj_struct.py  pyproject.toml  visualize_graph.py
.github/workflows/: publish.yaml
config/: prompts.yaml  settings.yaml
evals/: evaluation_results.csv  generate_datasets.py  prepare_test_dataset.py  runner.py
k8s/: 02-qdrant.yaml  03-redis.yaml  04-fastapi.yaml
src/agentic_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agentic_self_rag/: main.py
src/agentic_self_rag/agentic_rag/: edges.py  graph.py  state.py
src/agentic_self_rag/agentic_rag/nodes/: generate.py  graders.py  retrieve.py  reviser.py  rewriter.py  router.py
src/agentic_self_rag/core/: config_loader.py  exceptions.py  logger.py
src/agentic_self_rag/database/: connection.py  vector_store.py
src/agentic_self_rag/ingestion/: embedder.py  processor.py
src/agentic_self_rag/utils/: llm_factory.py  visualize.py
