[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.7.0",
    "fastapi>=0.135.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langchain-redis>=0.2.5",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-redis>=0.4.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.13.1",
    "pypdf>=6.7.5",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.0",
    "ragas>=0.4.3",
    "redis>=7.1.1",
    "uvicorn>=0.41.0",
]
